# ports

./: AGENTS.md  Cargo.toml  Makefile  README.md
.claude/skills/: SKILLS.md
app/: Package.swift
app/Sources/PortsBar/: AppModel.swift  DaemonClient.swift  PortsBarApp.swift  Protocol.swift
app/Sources/PortsBarCore/: AppCoordinator.swift  AppModel.swift  Protocol.swift  (+10 more)
assets/: AppIcon.icns
scripts/: gate-fast.sh  gate-full.sh  smoke-app.sh
src/: lib.rs  main.rs
src/daemon/: actor.rs  engine.rs  mod.rs  server.rs  supervise.rs
src/forward/: file.rs  mod.rs  tunnel.rs
src/protocol/: error.rs  ids.rs  message.rs  mod.rs
src/ssh/: config.rs  connection.rs  discovery.rs
src/tui/: app.rs  input.rs  ui.rs
tests/: daemon_socket.rs  protocol_fixtures.rs
tests/protocol_fixtures/: conn_status_connected.json  conn_status_connecting.json  conn_status_disconnected.json  daemon_event_file_transfer.json  daemon_message_ack_error.json  daemon_message_ack_hosts.json  daemon_message_ack_ok.json  daemon_message_event.json  daemon_message_state.json  error_bad_request.json  error_bind_failed.json  error_connect_failed.json  error_not_connected.json  error_send_file_failed.json  error_unknown_host.json  forward_state_error.json  forward_state_forwarding.json  forward_state_idle.json  port_entry.json  request.json  request_body_connect.json  request_body_disconnect.json  request_body_list_hosts.json  request_body_send_file.json  request_body_set_config.json  request_body_shutdown.json  request_body_start_forward.json  request_body_stop_forward.json  state_snapshot.json
(+14 files in other folders)
