[package]
name = "ports"
version = "0.1.0"
edition = "2021"
description = "Lightweight SSH port forwarding TUI"

[dependencies]
russh = "0.46"
russh-keys = "0.46"
ssh2-config = "0.4"
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
async-trait = "0.1"
log = "0.4"
home = "0.5"
whoami = "1"
tokio-util = "0.7"
open = "5"
